--- a/resources/private/authority-admin/applications-settings.html
+++ b/resources/private/authority-admin/applications-settings.html
@@ -18,7 +18,7 @@
         <!-- /ko -->
       </section>
 
-
+      <!-- ko if: features.enabled('kunta-kuulee-naapurit') -->
       <section class="feature">
         <h2 data-bind="ltext: 'auth-admin.email-notifications'"></h2>
 
@@ -40,6 +40,7 @@
           </tbody>
         </table>
       </section>
+      <!--  /ko -->
 
     </div> <!-- container -->
   </section>
