--- a/resources/private/authority-admin/index.html
+++ b/resources/private/authority-admin/index.html
@@ -10,7 +10,7 @@
             <div class="container">
                 <ul id="applicationTabs" class="tabs">
                     <li><a class="link-btn" href="#!/users" data-test-id="users" data-bind="ltext: 'auth-admin.users', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'users'}"></a></li>
-                    <li><a class="link-btn" href="#!/applications" data-test-id="" data-bind="ltext: 'auth-admin.admin', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'applications'}"></a></li>
+                    <li><a class="link-btn" href="#!/applications" data-test-id="" data-bind="ltext: 'auth-admin.application-settings', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'applications'}"></a></li>
                     <li><a class="link-btn" href="#!/operations" data-test-id="" data-bind="ltext: 'auth-admin.selected-operations', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'operations'}"></a></li>
                     <li><a class="link-btn" href="#!/attachments" data-test-id="" data-bind="ltext: 'auth-admin.operations-attachments.attachments', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'attachmentes'}"></a></li>
                     <li><a class="link-btn" href="#!/backends" data-test-id="" data-bind="ltext: 'auth-admin.backends', css: {'selected': lupapisteApp.models.rootVMO.currentPage() === 'backends'}"></a></li>
