--- a/resources/private/ui-components/foreman-other-applications/foreman-other-applications-template.html
+++ b/resources/private/ui-components/foreman-other-applications/foreman-other-applications-template.html
@@ -43,14 +43,16 @@
         <tbody data-bind="foreach: { data: rows, as: 'row' }">
           <tr>
             <!-- ko foreach: { data: $component.subSchemas, as: 'schema' } -->
-            <td data-bind="visible: !schema.hidden,
-                           component: { name: uicomponent,
-                                        params: { schema: $data,
-                                                  path: $parent.path.concat(name),
-                                                  i18npath: i18npath,
-                                                  applicationId: applicationId,
-                                                  documentId: documentId }},
-                           attr: { 'data-test-col-name': schema.name }"></td>
+              <!-- ko ifnot: schema.hidden -->
+              <td><span class="form-entry form-input"
+                        data-bind="component: { name: uicomponent,
+                                                params: { schema: $data,
+                                                          path: $parent.path.concat(name),
+                                                          i18npath: i18npath,
+                                                          applicationId: applicationId,
+                                                          documentId: documentId }},
+                           attr: { 'data-test-col-name': schema.name }"></span></td>
+              <!-- /ko -->
             <!-- /ko -->
 
             <td class="action-column">
@@ -62,12 +64,11 @@
         </tbody>
       </table>
       <div class="button-group" data-bind="visible: updatable()">
-        <span data-bind="saveIndicator: indicator"></span>
         <span data-bind="component: { name: 'docgen-button',
-                                     params: { id: groupId + '-append-button', 
-                                               className: 'positive', 
-                                               icon: 'lupicon-circle-plus', 
-                                               label: appendLabel, 
+                                     params: { id: groupId + '-append-button',
+                                               className: 'positive',
+                                               icon: 'lupicon-circle-plus',
+                                               label: appendLabel,
                                                clickFn: addGroup }}">
         </span>
     </script>
