pass events to select to enable help and errors for selects

--- a/resources/private/ui-components/docgen/select/docgen-select-template.html
+++ b/resources/private/ui-components/docgen/select/docgen-select-template.html
@@ -14,6 +14,7 @@
                          optionsCaption: optionsCaption,
                          disable: disabled() || readonly(),
                          css: classes">
+                         event: events,
       </select>
       <span data-bind="saveIndicator: indicator, label: false"></span>
     </script>
