--- a/resources/private/ui-components/message-panel/message-panel-template.html
+++ b/resources/private/ui-components/message-panel/message-panel-template.html
@@ -4,7 +4,7 @@
   <section class="page container">
     <script type="text/x-jquery-tmpl" id="message-panel-template" class="form-table">
     <span data-bind="fader: showMessagePanel, duration: 400, css: params['class']">
-      <span class="warn" data-bind="text: params.message"></span>
+      <span class="warn" data-bind="html: params.message"></span>
     </span>
   </script>
 </body>
