LPK 147: show attachment icon for statements

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -777,7 +777,7 @@
                                 <div class="accordion-fields">
                                     <div id="application-summary-statements-table">
                                       <div data-bind="component: {name: 'statements-table',
-                                                                  params: {applicationId: $data.id,
+                                                                  params: {application: $data,
                                                                            statements: $data.statements,
                                                                            authModel: $root.authorization,
                                                                            localisationKeys: {missing: 'application.statement.missing-from-prev-permit'}}}"></div>
