--- a/resources/private/ui-components/statement/statements-table/statements-table-template.html
+++ b/resources/private/ui-components/statement/statements-table/statements-table-template.html
@@ -13,6 +13,7 @@
           <table class="table table-striped tablesorter" data-test-id="application-statements">
               <thead>
                   <tr>
+                      <th></th>
                       <th data-bind="ltext: 'application.statement.desc'"></th>
                       <th data-bind="ltext: 'auth-admin.statement-person.name'"></th>
                       <th data-bind="ltext: 'application.statement.requested'"></th>
@@ -26,6 +27,9 @@
               </thead>
               <tbody data-bind="foreach: $data.statements()">
                   <tr class="statement-row">
+                      <td>
+                        <i class="lupicon-paperclip" data-bind="visible: $component.hasAttachment($data)"></i>
+                      </td>
                       <td>
                           <span data-bind="if: $data.status() || $component.authorization.ok('should-see-unsubmitted-statements')">
                               <a href="#" data-bind="text: $data.person.text,
