refresh statement button and show hint for user if statement is modified elsewhere

--- a/resources/private/ui-components/statement/statement-control-buttons/statement-control-buttons-template.html
+++ b/resources/private/ui-components/statement/statement-control-buttons/statement-control-buttons-template.html
@@ -13,6 +13,13 @@
           <i class="lupicon-check"></i>
           <span data-bind="ltext: 'statement.submit'"></span>
         </button>
+        <button data-bind="click: refresh"
+                id="statement-refresh"
+                type="refresh"
+                class="secondary">
+          <i class="lupicon-refresh"></i>
+          <span data-bind="ltext: 'statement.refresh'"></span>
+        </button>
       </div>
     </script>
   </section>
