--- a/resources/private/ui-components/statement/statements-table/statements-table-template.html
+++ b/resources/private/ui-components/statement/statements-table/statements-table-template.html
@@ -31,12 +31,12 @@
                         <i class="lupicon-paperclip" data-bind="visible: $component.hasAttachment($data)"></i>
                       </td>
                       <td>
-                          <span data-bind="if: $data.status() || $component.authorization.ok('should-see-unsubmitted-statements')">
+                          <span data-bind="if: $data.status && $data.status() || $component.authorization.ok('should-see-unsubmitted-statements')">
                               <a href="#" data-bind="text: $data.person.text,
                                                      click: $component.openStatement,
                                                      attr: {'data-test-id' : 'open-statement-' + $index()}"></a>
                           </span>
-                          <span data-bind="ifnot: $data.status() || $component.authorization.ok('should-see-unsubmitted-statements')">
+                          <span data-bind="ifnot: ($data.status && $data.status()) || $component.authorization.ok('should-see-unsubmitted-statements')">
                               <span data-bind="text: $data.person.text, attr: {'data-test-id' : 'open-statement-' + $index()}"></span>
                           </span>
                       </td>
@@ -45,7 +45,7 @@
                       <td data-bind="dateString: $data.dueDate,
                                      css: {'statement-over-due': $component.isStatementOverDue($data)}"></td>
                       <td data-bind="dateString: $data.given"></td>
-                      <td data-bind="text: $data.status() && loc(['statement', $data.status()]), attr: {'data-test-name' : $data.person.name}"></td>
+                      <td data-bind="text: $data.status && $data.status() && loc(['statement', $data.status()]), attr: {'data-test-name' : $data.person.name}"></td>
                       <!-- ko if: $component.authorization.ok('delete-statement') -->
                         <td>
                           <span data-bind="click: $component.openDeleteDialog,
