--- a/resources/private/authority-admin/applications-settings.html
+++ b/resources/private/authority-admin/applications-settings.html
@@ -33,7 +33,7 @@
             <tr>
               <td data-bind="ltext: 'auth-admin.email-notifications.neighbor'"></td>
               <td class="value">
-                <input type="text" data-bind="value: organization.neighborOrderEmails, enable: lupapisteApp.models.globalAuthModel.ok('set-organization-neighbor-order-email')" />
+                <input data-test-id="neighborOrderEmails" type="text" data-bind="value: organization.neighborOrderEmails, enable: lupapisteApp.models.globalAuthModel.ok('set-organization-neighbor-order-email')" />
                 <span class="save-indicator" data-bind="saveIndicator: organization.neighborOrderEmailsIndicator, label: false"></span>
               </td>
             </tr>
