fix css class from 'error' to 'err'

--- a/resources/private/create/map-popup.html
+++ b/resources/private/create/map-popup.html
@@ -30,7 +30,7 @@
          </div>
 
          <div data-bind="if: !municipalitySupported()">
-            <p class="error"
+            <p class="err"
                data-bind="ltext: 'municipality.unknown'">
             </p>
           </div>
