open map in full screen

--- a/resources/private/bulletins/application-bulletin/application-bulletin-template.html
+++ b/resources/private/bulletins/application-bulletin/application-bulletin-template.html
@@ -45,6 +45,9 @@
             </div>
             <div class="application-map-container">
               <div id="bulletin-map" class="map map-large" style="width: 320px; height: 280px;"></div>
+              <div class="application-map-actions">
+                <a data-bind="click: openOskariMap, ltext:'map.open'" class="map-search-button" ></a>
+              </div>
             </div>
 
               <!-- Actions: -->
