--- a/resources/private/ui-components/statement/statement-edit/statement-edit-reply-template.html
+++ b/resources/private/ui-components/statement/statement-edit/statement-edit-reply-template.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <section class="page container">
-    <script type="text/x-jquery-tmpl" id="statement-edit-template">
+    <script type="text/x-jquery-tmpl" id="statement-edit-reply-template">
 
     <div class="headerarea">
       <div>
@@ -22,30 +22,21 @@
           <span data-bind="ltext: 'luonnos'">Luonnos</span>
         </span>
       </div>
-      <p id="statement-covering-note">
-        <span data-bind="text: coveringNote">Saate</span>
-      </p>
     </div>
 
     <div class="statement-info">
       <form>
-        <div class="form-entry"
-             data-bind="visible: tab === 'statement'">
-          <label for="statement-type-select" class="form-label">
-            <span data-bind="ltext: 'statement.title'">Puoltotieto</span>
-            <img src="/img/ajax-loader-12.gif" alt="..." width="12" height="12" id="statement-type-select-loader" style="display: none;">
+        <div class="form-entry">
+          <input id="statement-nothing-to-add" 
+                 type="checkbox" 
+                 class="form-input checkbox" 
+                 data-bind="checked: nothingToAdd,
+                            disable: !enabled()">
+          <label for="statement-nothing-to-add" class="form-label">
+            <span data-bind="ltext: 'statement.nothing-to-add.label'">Ei lisättävää</span>
           </label>
-          <select id="statement-type-select" 
-                  class="form-input combobox select" 
-                  data-bind="options: statuses,
-                             optionsValue: 'id',
-                             optionsText: 'name',
-                             value: selectedStatus,
-                             valueAllowUnset: true,
-                             optionsCaption: loc('choose'),
-                             disable: !enabled()"></select>
         </div>
-        <div>
+        <div data-bind="visible: !nothingToAdd()">
           <label class="form-label" for="statement-text" data-bind="ltext: 'statement.' + tab + '.text'"></label>
           <textarea
             data-bind="attr: {placeholder: loc('statement.' + tab + '.message.placeholder')}, 
