robot tests for statements

--- a/resources/private/ui-components/statement/statement-edit/statement-edit-reply-template.html
+++ b/resources/private/ui-components/statement/statement-edit/statement-edit-reply-template.html
@@ -33,7 +33,7 @@
                  data-bind="checked: nothingToAdd,
                             disable: !enabled()">
           <label for="statement-nothing-to-add" class="form-label">
-            <span data-bind="ltext: 'statement.nothing-to-add.label'">Ei lisättävää</span>
+            <span data-bind="ltext: 'statement.nothing-to-add.label'">Ei lisattavaa</span>
           </label>
         </div>
         <div data-bind="visible: !nothingToAdd()">
