--- a/resources/private/ui-components/docgen/inline-string/docgen-inline-string-template.html
+++ b/resources/private/ui-components/docgen/inline-string/docgen-inline-string-template.html
@@ -13,6 +13,9 @@
                         event: events,
                         disable: disabled,
                         attr: { readonly: readonly,
+                                maxlength: inputOptions.maxLength,
+                                max: inputOptions.max,
+                                min: inputOptions.min,
                                 'data-test-id': path.join('.') }"></input>
       <span data-bind="saveIndicator: indicator, label: false"
             data-test-id="save-indicator"></span>
