--- a/resources/private/ui-components/docgen/string/docgen-string-template.html
+++ b/resources/private/ui-components/docgen/string/docgen-string-template.html
@@ -13,10 +13,10 @@
                           css: classes,
                           event: events,
                           disable: disabled,
-                          attr: { readonly: readonly,
-                                  maxlength: inputOptions.maxLength,
-                                  max: inputOptions.max,
-                                  min: inputOptions.min,
+                          attr: { 'readonly': readonly,
+                                  'maxlength': inputOptions.maxLength,
+                                  'max': inputOptions.max,
+                                  'min': inputOptions.min,
                                   'data-test-id': path.join('.') }"/>
 
         <!-- ko if: schema.unit -->
