fix LPK-1135, modal dialog calculates content height from content class

--- a/resources/private/ui-components/foreman-history/foreman-history-template.html
+++ b/resources/private/ui-components/foreman-history/foreman-history-template.html
@@ -4,7 +4,7 @@
   <section class="page container">
     <script type="text/x-jquery-tmpl" id="foreman-history-template" class="form-table">
       <label class="form-label form-label-table" data-bind="visible: !params.showAllProjects, ltext: 'tyonjohtaja.historia.otsikko'"></label>
-      <table>
+      <table class="content">
         <thead>
           <tr>
             <th class="first"  data-bind="ltext: 'tyonjohtaja.historia.kunta'"></th>
