--- a/resources/private/statement/statement.html
+++ b/resources/private/statement/statement.html
@@ -30,7 +30,13 @@
                                                applicationId: $root.applicationId,
                                                statementId: $root.statementId,
                                                authModel: $root.authorization } },
-                        visible: $root.selectedTab() === 'statement'"></div> 
+                        visible: $root.selectedTab() === 'statement'"></div>
+        <div data-bind="component: { name: 'statement-reply-request',
+                                     params: { application: $root.application,
+                                               applicationId: $root.applicationId,
+                                               statementId: $root.statementId,
+                                               authModel: $root.authorization} },
+                        visible: $root.selectedTab() === 'reply-request'"></div> 
         <div data-bind="component: { name: 'statement-edit-reply',
                                      params: { application: $root.application,
                                                applicationId: $root.applicationId,
