comment out type of bulletin comment, let's wait for feedback

--- a/resources/private/bulletins/application-bulletins/application-bulletins-list/application-bulletins-list-template.html
+++ b/resources/private/bulletins/application-bulletins/application-bulletins-list/application-bulletins-list-template.html
@@ -23,7 +23,7 @@
             <td data-bind="text: $data.applicant"></td>
             <td data-bind="dateTimeString: $data.date"></td>
             <td>
-              <div data-bind="text: $data.commentingType"></div>
+              <!-- <div data-bind="text: $data.commentingType"></div> waiting for feedback -->
               <div data-bind="text: $data.commentingEndsAt"></div>
             </td>
           </tr>
