--- a/resources/private/header/header.html
+++ b/resources/private/header/header.html
@@ -26,7 +26,7 @@
                         <span class="narrow-hide" data-bind="ltext: 'navigation'"></span>
                     </a>
                 </div>
-                <div class="header-box" data-bind="visible: features.enabled('arkistointi') && $root.showArchiveMenuOptions">
+                <div class="header-box" data-bind="visible: $root.showArchiveMenuOptions">
                     <a href="/document-search" data-bind="attr: {'title': loc('Dokumentit')}">
                         <span class="lupicon-archives"></span>
                         <span class="narrow-hide" data-bind="ltext: 'Dokumentit'"></span>
