add icon for not public attachments

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -564,6 +564,10 @@
                                 <i class="lupicon-circle-section-sign"></i>
                                 <span data-bind="ltext: 'attachment.verdict-attachment'"></span>
                             </div>
+                            <div class="like-btn">
+                                <i class="lupicon-lock"></i>
+                                <span data-bind="ltext: 'attachment.not-public-attachment'"></span>
+                            </div>
                         </div>
 
                         <div data-bind="if: preAttachmentsByOperation().length == 0 && postAttachmentsByOperation().length == 0">
